--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,47 @@
 language: android
-
-jdk:
-  - oraclejdk8
-
-before_install:
-  # Install SDK license so Android Gradle plugin can install deps.
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
-  # Install the rest of tools (e.g., avdmanager).
-  - sdkmanager tools
-  # Install the system image.
-  - sdkmanager "system-images;android-19;default;armeabi-v7a"
-  # Create and start emulator for the script. Meant to race the install task.
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-19;default;armeabi-v7a"
-  - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
-
-install: ./gradlew clean assemble --stacktrace
-
-before_script:
-  - android-wait-for-emulator
-  - adb shell settings put global window_animation_scale 0 &
-  - adb shell settings put global transition_animation_scale 0 &
-  - adb shell settings put global animator_duration_scale 0 &
-  - adb shell input keyevent 82 &
-
-script: ./gradlew check connectedCheck --stacktrace
-
+jdk: oraclejdk8
 env:
+  matrix:
+  - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
+  - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
   global:
-    - ADB_INSTALL_TIMEOUT=8
-
-notifications:
-  email: false
-
-sudo: false
-
+  - ADB_INSTALL_TIMEOUT=10
+  - ANDROID_API_LEVEL=27
+  - ANDROID_BUILD_TOOLS_VERSION=27.0.3
+android:
+  licenses:
+  - 'android-sdk-preview-license-.+'
+  - 'android-sdk-license-.+'
+  - 'google-gdk-license-.+'
+  components:
+  - tools
+  - platform-tools
+  # The BuildTools version used by your project
+  - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+  # The SDK version used to compile your project
+  - android-$ANDROID_API_LEVEL
+  # Additional components
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
+  - android-19
+  - sys-img-armeabi-v7a-android-19
+  - android-21
+  - sys-img-armeabi-v7a-android-21
+before_cache:
+- rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
   directories:
-    - $HOME/.gradle
+  - $HOME/.gradle/daemon
+  - $HOME/.gradle/native
+  - $HOME/.gradle/wrapper
+before_script:
+- chmod +x gradlew
+- android list targets
+- echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI
+- emulator -avd test -no-skin -no-audio -no-window &
+script:
+- android-wait-for-emulator
+- adb devices
+- adb shell input keyevent 82 &
+- ./gradlew testDebugUnitTest installDebug
