--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "ru.anisart.vv"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 46
-        versionName "1.7"
+        versionCode 48
+        versionName "1.8"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
@@ -47,23 +47,12 @@ android {
             signingConfig signingConfigs.release
         }
     }
-    splits {
-        abi {
-            enable true
-            reset()
-            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a', 'armeabi'//select ABIs to build APKs for
-            universalApk false //generate an additional APK that contains all the ABIs
-        }
-    }
-    // map for the version code
-    project.ext.versionCodes = ['armeabi': 1, 'armeabi-v7a': 2, 'arm64-v8a': 3, 'mips': 5, 'mips64': 6, 'x86': 8, 'x86_64': 9]
 
     android.applicationVariants.all { variant ->
         // assign different version code for each output
         variant.outputs.each { output ->
             output.versionCodeOverride =
-                    android.defaultConfig.versionCode * 10000000 +
-                            project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0)
+                    android.defaultConfig.versionCode * 10000000
         }
     }
     compileOptions {
@@ -72,6 +61,17 @@ android {
     }
     lintOptions {
         abortOnError false
+    }
+    bundle {
+        density {
+            enableSplit true
+        }
+        abi {
+            enableSplit true
+        }
+        language {
+            enableSplit false
+        }
     }
 }
 
